--- a/app/src/components/primitives/button/Button.astro
+++ b/app/src/components/primitives/button/Button.astro
@@ -112,6 +112,10 @@ const className = clsx(
     line-height: var(--text-label-large-line-height);
     letter-spacing: var(--text-label-large-letter-spacing);
 
+    transition:
+      background-color 15ms linear,
+      box-shadow 105ms linear;
+
     &.with-leading {
       padding-left: 16px;
     }
