--- a/app/src/pages/showcase/index.astro
+++ b/app/src/pages/showcase/index.astro
@@ -2,8 +2,9 @@
 import { Footer } from "../../components/footer";
 import { Header } from "../../components/header";
 import Page from "../../layouts/Page.astro";
+import { getShowcaseCollection } from "../../schemas/showcase";
 
-
+const entries = await getShowcaseCollection();
 ---
 
 <Page>
