--- a/app/src/components/markdown/Markdown.astro
+++ b/app/src/components/markdown/Markdown.astro
@@ -156,6 +156,7 @@
     display: block;
     overflow: auto;
     border-collapse: collapse;
+    width: fit-content;
   }
   .markdown tr:nth-child(2n):not(:where(.not-content *)) {
     background-color: var(--color-surface-container-low);
