--- a/app/src/pages/showcase/index.astro
+++ b/app/src/pages/showcase/index.astro
@@ -1,16 +1,65 @@
 ---
 import { Footer } from "../../components/footer";
 import { Header } from "../../components/header";
+import { ShowcaseCard } from "../../components/showcase/card";
 import Page from "../../layouts/Page.astro";
 import { getShowcaseCollection } from "../../schemas/showcase";
 
-const entries = await getShowcaseCollection();
+const entries = (await getShowcaseCollection())
+  .filter(entry => entry.slug.split("/").length === 1);
 ---
 
 <Page>
   <Header />
-  <main>
-    <h1>WIP</h1>
+  <main data-pagefind-ignore>
+    <article>
+      <ul class="entries">{
+        entries.map(entry => {
+          return (
+            <li>
+              {/* <a href={`/showcase/${entry.slug}/`}>
+                {entry.data.title}
+              </a> */}
+              <ShowcaseCard class="card" entry={entry} />
+            </li>
+          );
+        })
+      }</ul>
+    </article>
   </main>
   <Footer />
 </Page>
+
+<style>
+  article {
+    width: 100%;
+    max-width: 960px;
+
+    margin: 64px auto 24px auto;
+    padding: 0 24px;
+  }
+  .entries {
+    list-style: none;
+    display: grid;
+    place-items: center;
+    place-content: center;
+    grid-template-columns: 1fr;
+    gap: 24px;
+  }
+
+  @media only screen and (min-width: 600px) {
+    .entries {
+      grid-template-columns: 1fr 1fr;
+    }
+  }
+
+  li {
+    display: contents;
+  }
+
+  .card {
+    width: 100%;
+    height: 100%;
+    grid-column: span 1;
+  }
+</style>
