--- a/app/src/pages/showcase/index.astro
+++ b/app/src/pages/showcase/index.astro
@@ -1,6 +1,7 @@
 ---
 import { Footer } from "../../components/footer";
 import { Header } from "../../components/header";
+import { Search } from "../../components/search";
 import { ShowcaseCard } from "../../components/showcase/card";
 import Page from "../../layouts/Page.astro";
 import { getShowcaseCollection } from "../../schemas/showcase";
