--- a/app/src/pages/blog/index.astro
+++ b/app/src/pages/blog/index.astro
@@ -6,12 +6,10 @@ import { getCollection } from "astro:content";
 import { Image } from "astro:assets";
 
 import ImageIcon from "~icons/material-symbols-rounded/image:outlined&opticalSize=48";
-import type { CollectionEntry } from "astro:content";
 
 import dayjs from "dayjs";
 import utc from "dayjs/plugin/utc";
 import { getBlogCollection } from "../../schemas/blog";
-
 
 dayjs.extend(utc);
 
@@ -53,6 +51,7 @@ const posts = (await getBlogCollection())
                         <span class="date">{date}</span>
                         <h3 id={anchorId} class="title">{post.title}</h3>
                         {post.description && <p class="description">{post.description}</p>}
+                        {post.tags && <ul class="tags">{post.tags.map(tag => <li class="tag">{tag.name}</li>)}</ul>}
                       </div>
                   </a>
                   <div class="authors">
@@ -94,7 +93,7 @@ const posts = (await getBlogCollection())
     margin: 64px auto 24px auto;
     padding: 0 24px;
   }
-  li {
+  .posts > li {
     display: contents;
   }
 
@@ -252,11 +251,12 @@ const posts = (await getBlogCollection())
     display: flex;
     align-items: center;
     justify-content: flex-start;
-    gap: 4px;
     padding-inline: 8px;
   }
 
   .by {
+    margin-right: 4px;
+
     font-family: var(--text-label-large-family);
     font-size: var(--text-label-large-size);
     font-weight: var(--text-label-large-weight);
@@ -293,6 +293,10 @@ const posts = (await getBlogCollection())
     transition-duration: 105ms;
     transition-timing-function: var(--easing-standard);
 
+    &.more {
+      padding-inline: 16px;
+    }
+
     @media (hover: hover) {
       &:hover {
         background-color: color-mix(in srgb, transparent, var(--color-on-surface-variant) 8%);
@@ -325,5 +329,35 @@ const posts = (await getBlogCollection())
     width: 24px;
     height: 24px;
     border-radius: 50%;
+  }
+
+  .tags {
+    list-style: none;
+
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: flex-start;
+    gap: 8px;
+  }
+
+  .tag {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    background-color: var(--color-secondary-container);
+    border-radius: 8px;
+    height: 32px;
+    padding-inline: 16px;
+
+    font-family: var(--text-label-large-family);
+    font-size: var(--text-label-large-size);
+    font-weight: var(--text-label-large-weight);
+    line-height: var(--text-label-large-line-height);
+    letter-spacing: var(--text-label-large-letter-spacing);
+    text-decoration: none;
+    font-variation-settings: "GRAD" 0;
+    color: var(--color-on-secondary-container);
   }
 </style>
