--- a/app/src/pages/blog/[...slug].astro
+++ b/app/src/pages/blog/[...slug].astro
@@ -82,7 +82,7 @@ const { Content } = await post.render();
     flex-direction: column;
   }
   main {
-    max-width: 960px;
+    max-width: min(960px, 100%);
     width: fit-content;
     margin: 0 auto;
     flex-grow: 1;
